fixing fonts on mobile

--- a/src/components/payment-method/payment-content/payment-content.styles.css
+++ b/src/components/payment-method/payment-content/payment-content.styles.css
@@ -42,6 +42,9 @@
     margin-left: -40px !important;
   }
 
+  .css-1mtgz4c-MuiTypography-root {
+    font-size: 15px !important;
+  }
   .payment {
     margin-top: -25px;
     margin-left: -25px;
